03/31/2005 Bob Rossi <bob@brasko.net>

	* interface.c (set_up_signal): Catch the SIGCHLD signal now.
	(signal_handler): Alert TGDB of SIGCHLD now.

03/31/2005 Bob Rossi <bob@brasko.net>

	* cgdb.c (parse_long_options): Stop looking at args when one is not
	recognized.

03/31/2005 Bob Rossi <bob@brasko.net>

	* cgdb.c (version_info): Update copyright

03/31/2005 Bob Rossi <bob@brasko.net>

    * helptext.h: Updated the README file.
	* sources.c (auto_source_reload): Change default to be off.

03/31/2005 Bob Rossi <bob@brasko.net>

    * helptext.h: Updated the README file.
	* cgdbrc.c (COMMANDS): Remove source_reload and add edit
	* sources.c (load_file): Init more data in node->orig_buf

03/30/2005 Bob Rossi <bob@brasko.net>

	* sources.h (list_node): Remove covered_lines field.
	* cgdbrc.c (global): Remove line_coverage_option
	(VARIABLES): Removed line_coverage field
	* interface.c (global): Remove line_coverage_option
	* sources.c (load_file): Fixed memory runtime error and code related to
	line_coverage_option
	(source_display): Remove extern to line_coverage_option and related code
	(source_set_exec_line): Remove code related to line_coverage_option

11/05/2004 Bob Rossi <bob@brasko.net>

   * sources.h: Add #include of time.h

07/28/2004 Bob Rossi <bob@brasko.net>

    * helptext.h: Updated the README file.
	* sources.h (struct list_node): add last_modification field
	(source_reload): added function
	* cgdb.c (process_commands): Call source_reload when
	TGDB_UPDATE_FILE_POSITION recieved
	* cgdbrc.c (VARIABLES): added autosourcereload
	(COMMANDS): Added source_reload.
	* sources.c
	(get_timestamp,release_file_buffer,release_file_memory,source_reload):
	new prototypes.


07/25/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (process_commands): Add case for TGDB_INFERIOR_EXITED

version 0.5.0 (07/14/2004):

07/14/2004 Bob Rossi <bob@brasko.net>

    * cgdb.c (create_help_file): null-terminate dashes.

06/29/2004 Bob Rossi <bob@brasko.net>
